--- a/src/pages/Tabbar/Home/Components/HomeCenterBox/index.scss
+++ b/src/pages/Tabbar/Home/Components/HomeCenterBox/index.scss
@@ -1,11 +1,18 @@
 .HomeCenterBox {
-  padding-inline: 16px;
-  margin-top: -50px;
-  background-image: url("@/assets/home/centerBg.png");
-  background-position: top 185px right; /* 从上方50px开始 */
+  margin-top: 40px;
+  background-image: url("@/assets/home/homeCenter.png");
   background-repeat: no-repeat;
-  background-size: 100% 590px;
-  height: 800px;
+  background-size: 100% 650px;
+  background-position: top 292px right 0;
+  .centerBoxBg {
+    margin-top: 50px;
+  }
+  .lineHeight210 {
+    height: 210px;
+  }
+  .lineHeight65 {
+    height: 65px;
+  }
   .title {
     text-align: center;
     font-weight: 500;
@@ -13,20 +20,18 @@
     color: #ffffff;
   }
   .totalBox {
-    margin-top: 8px;
     .totalTop20 {
       margin-top: 20px;
     }
     .totalOption {
       .font12Option {
-        color: #00f8f3;
         display: flex;
         align-items: center;
         justify-content: space-between;
         .txt {
           font-size: 12px;
           font-weight: 400;
-          color: #00f8f3;
+          color: #a37fff;
         }
       }
       .font16Option {
@@ -43,12 +48,247 @@
       }
     }
   }
+  .allBox {
+    padding-inline: 16px;
+
+    position: relative;
+    .allDataBg {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 169px;
+    }
+    .boxContent {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      margin-top: 19px;
+      .boxItem {
+        padding: 1px;
+        background: linear-gradient(
+          180deg,
+          rgba(203, 214, 255, 1),
+          rgba(95, 130, 245, 1)
+        );
+        border-radius: 2px;
+        .boxItemNumber {
+          background: linear-gradient(180deg, #000000 0%, #251a46 100%);
+          border-radius: 2px;
+          padding: 7px 12px;
+          font-weight: 500;
+          font-size: 20px;
+          color: #ffffff;
+        }
+      }
+    }
+    .boxTitle {
+      text-align: center;
+      margin-top: 14px;
+      font-weight: 400;
+      font-size: 14px;
+      color: #ffffff;
+    }
+  }
   .box {
-    background: rgba(0,240,247,0.15);
-    border: 1px solid #00c4f7;
     margin-top: 12px;
     border-radius: 8px;
-    padding: 16px 12px;
+    margin-inline: 16px;
+
+    padding: 1px; // 边框厚度
+    background: linear-gradient(
+      180deg,
+      rgba(203, 214, 255, 0.75),
+      rgba(95, 130, 245, 0.75)
+    );
+    clip-path: polygon(
+      8px 0,
+      calc(100% - 8px) 0,
+      100% 8px,
+      100% calc(100% - 8px),
+      calc(100% - 8px) 100%,
+      8px 100%,
+      0 calc(100% - 8px),
+      0 8px
+    );
+    .totalBox {
+      padding: 16px 12px;
+      background: linear-gradient(180deg, #000000 0%, #251a46 100%);
+      clip-path: polygon(
+        8px 0,
+        calc(100% - 8px) 0,
+        100% 8px,
+        100% calc(100% - 8px),
+        calc(100% - 8px) 100%,
+        8px 100%,
+        0 calc(100% - 8px),
+        0 8px
+      );
+    }
+
+    .vipBox {
+      padding: 16px 12px;
+      background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.85) 0%,
+        rgba(37, 26, 70, 0.85) 100%
+      );
+      //  background: linear-gradient(
+      //   180deg,
+      //   rgba(0, 0, 0, 1) 0%,
+      //   rgba(37, 26, 70, 1) 100%
+      // );
+      clip-path: polygon(
+        8px 0,
+        calc(100% - 8px) 0,
+        100% 8px,
+        100% calc(100% - 8px),
+        calc(100% - 8px) 100%,
+        8px 100%,
+        0 calc(100% - 8px),
+        0 8px
+      );
+      .title {
+        font-weight: 500;
+        font-size: 18px;
+        color: #ffffff;
+      }
+      .hintTxt {
+        margin-top: 12px;
+        font-weight: 400;
+        font-size: 12px;
+        text-align: center;
+        color: #a37fff;
+      }
+      .centerBox {
+        margin-top: 16px;
+        background: rgba(0, 0, 0, 0.35);
+        border-radius: 4px;
+        padding: 8px;
+        .centerTxtOption {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          .centerTxt {
+            flex: 1;
+            font-weight: 400;
+            font-size: 12px;
+            color: #a37fff;
+          }
+          .centerValue {
+            color: #fff !important;
+          }
+        }
+        .centerTxtTop12 {
+          margin-top: 12px;
+        }
+      }
+      .stepBox {
+        display: flex;
+        align-items: center;
+        margin-top: 14px;
+        .lpOption {
+          padding: 2px 8px;
+          background: #138bff;
+          border-radius: 50px;
+          font-weight: bold;
+          font-size: 12px;
+          color: #ffffff;
+          position: relative;
+          .lpTxt {
+            position: absolute;
+            bottom: -24px;
+            left: 0;
+            font-weight: 400;
+            font-size: 12px;
+            color: #138bff;
+          }
+        }
+        .lpLine {
+          width: 106px;
+          height: 6px;
+          background: #138bff;
+        }
+        .nodeOption {
+          padding: 2px 8px;
+          background: #40db67;
+          border-radius: 50px;
+          font-weight: bold;
+          font-size: 12px;
+          color: #ffffff;
+          position: relative;
+          .nodeTxt {
+            position: absolute;
+            bottom: -24px;
+            left: 0;
+            font-weight: 400;
+            font-size: 12px;
+            color: #db9f25;
+          }
+        }
+        .nodeLine {
+          width: 175px;
+          height: 6px;
+          background: #00d7d3;
+        }
+        .donateOption {
+          padding: 2px 8px;
+          background: #00d7d3;
+          border-radius: 50px;
+          font-weight: bold;
+          font-size: 12px;
+          color: #ffffff;
+          position: relative;
+          .donateTxt {
+            position: absolute;
+            bottom: -24px;
+            left: 0;
+            font-weight: 400;
+            font-size: 12px;
+            color: #a37fff;
+          }
+        }
+      }
+      .addressBox {
+        border-radius: 4px;
+
+        margin-top: 42px;
+        display: flex;
+        align-items: center;
+        background: rgba(0, 0, 0, 0.35);
+
+        .adddressTxt {
+          display: flex;
+          align-items: center;
+          border-radius: 4px;
+          padding: 12px 8px;
+          box-sizing: border-box;
+          .spn1 {
+            flex: none;
+            font-weight: 400;
+            font-size: 12px;
+            color: #a37fff;
+          }
+          .spn2 {
+            flex: 1;
+            width: 230px;
+            margin-inline: 12px;
+            font-weight: 400;
+            font-size: 12px;
+            color: #ffffff;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+        }
+        .copyIcon {
+          margin-right: 12px;
+          flex: none;
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
     .boxTitle {
       text-align: center;
       font-weight: 500;
@@ -70,143 +310,132 @@
     color: #ffffff;
     text-align: center;
   }
-  .vipBox {
-    margin-top: 270px;
-    .title {
+
+  .rankingBox {
+    height: 700px;
+    margin-top: 50px;
+    background-image: url("@/assets/home/homeEnd.png");
+    background-repeat: no-repeat;
+    background-size: 100% 625px;
+    .rankIngTxt {
       font-weight: 500;
       font-size: 18px;
       color: #ffffff;
-    }
-    .hintTxt {
-      margin-top: 12px;
-      font-weight: 400;
-      font-size: 12px;
       text-align: center;
-      color: #00f8f3;
     }
-    .centerBox {
-      margin-top: 16px;
-      background: rgba(0, 0, 0, 0.35);
-      border-radius: 4px;
-      padding: 8px;
-      .centerTxtOption {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        .centerTxt {
-          flex: 1;
-          font-weight: 400;
-          font-size: 12px;
-          color: #00f8f3;
-        }
-      }
-      .centerTxtTop12 {
-        margin-top: 12px;
-      }
-    }
-    .stepBox {
+    .rankingTopBox {
+      margin-inline: 16px;
+
+      margin-top: 20px;
+      background-image: url("@/assets/home/rankingTopBg.png");
+      background-repeat: no-repeat;
+      background-size: 100% 210px;
+      height: 230px;
       display: flex;
       align-items: center;
-      margin-top: 14px;
-      .lpOption {
-        padding: 2px 8px;
-        background: #138bff;
-        border-radius: 50px;
-        font-weight: bold;
-        font-size: 12px;
-        color: #ffffff;
-        position: relative;
-        .lpTxt {
-          position: absolute;
-          bottom:-24px;
-          left: 0;
+      .topItem {
+        flex: 1;
+        .txt {
+          font-weight: bold;
+          font-size: 14px;
+          color: #ffffff;
+          text-align: center;
+        }
+        .usdt {
+          text-align: center;
           font-weight: 400;
           font-size: 12px;
-          color: #138bff;
+          color: rgba(255, 255, 255, 0.65);
+        }
+        .walletAddress {
+          margin-top: 8px;
+          text-align: center;
+          font-weight: 400;
+          font-size: 12px;
+          color: #dfdfdf;
         }
       }
-      .lpLine {
-        width: 106px;
-        height: 6px;
-        background: #138bff;
+      .topItemOne {
+        padding-top: 120px;
       }
-      .nodeOption {
-        padding: 2px 8px;
-        background: #40db67;
-        border-radius: 50px;
-        font-weight: bold;
-        font-size: 12px;
-        color: #ffffff;
-        position: relative;
-        .nodeTxt {
-          position: absolute;
-          bottom:-24px;
-          left: 0;
-          font-weight: 400;
-          font-size: 12px;
-          color: #40db67;
+      .topItemTwo {
+        padding-top: 60px;
+        .walletAddress {
+          color: #ffcb27 !important ;
         }
       }
-      .nodeLine {
-        width: 175px;
-        height: 6px;
-        background: #00d7d3;
-      }
-      .donateOption {
-        padding: 2px 8px;
-        background: #00d7d3;
-        border-radius: 50px;
-        font-weight: bold;
-        font-size: 12px;
-        color: #ffffff;
-        position: relative;
-        .donateTxt {
-          position: absolute;
-          bottom:-24px;
-          left: 0;
-          font-weight: 400;
-          font-size: 12px;
-          color: #00d7d3;
+      .topItemThree {
+        padding-top: 120px;
+        .walletAddress {
+          color: #e6ac79 !important ;
         }
       }
     }
-    .addressBox {
-      border-radius: 4px;
-
-      margin-top: 42px;
-       display: flex;
-        align-items: center;
-        background: rgba(0, 0, 0, 0.35);
-
-      .adddressTxt {
+    .rankingListBox {
+      background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.75) 0%,
+        rgba(37, 26, 70, 0.75) 100%
+      );
+      clip-path: polygon(
+        8px 0,
+        calc(100% - 8px) 0,
+        100% 8px,
+        100% calc(100% - 8px),
+        calc(100% - 8px) 100%,
+        8px 100%,
+        0 calc(100% - 8px),
+        0 8px
+      );
+      padding: 16px 12px;
+      box-sizing: border-box;
+      .headerTopOption {
+        .colorSize {
+          font-weight: 500;
+          font-size: 12px;
+          color: #a37fff;
+        }
         display: flex;
         align-items: center;
-        border-radius: 4px;
-        padding: 12px 8px;
-        box-sizing: border-box;
-        .spn1 {
-          flex: none;
-          font-weight: 400;
-          font-size: 12px;
-          color: #00f8f3;
+        .headerLeft {
+          width: 15%;
         }
-        .spn2 {
-          flex: 1;
-          width: 230px;
-          margin-inline: 12px;
-          font-weight: 400;
-          font-size: 12px;
-          color: #ffffff;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
+        .headerCenter {
+          width: 45%;
+        }
+        .headerRight {
+          width: 40%;
+          text-align: right;
         }
       }
-      .copyIcon {
-        margin-right: 12px;
-        flex:none;
-        width: 16px;
-        height: 16px;
+      .rankingItemBox {
+        .rankingItem {
+          margin-top: 12px;
+
+          display: flex;
+          align-items: center;
+          padding-bottom: 13px;
+          border-bottom: 1px dashed rgba(255, 255, 255, 0.25);
+          .itemLeft {
+            width: 15%;
+            font-weight: 500;
+            font-size: 14px;
+            color: #ffffff;
+          }
+          .itemCenter {
+            width: 45%;
+            font-weight: 400;
+            font-size: 12px;
+            color: #ffffff;
+          }
+          .itemRight {
+            width: 40%;
+            text-align: right;
+            font-weight: 400;
+            font-size: 12px;
+            color: #ffffff;
+          }
+        }
       }
     }
   }
