--- a/src/pages/Tabbar/Home/index.scss
+++ b/src/pages/Tabbar/Home/index.scss
@@ -1,5 +1,7 @@
 .homePageBox {
-  height: 100%;
   background: #000000;
   padding-bottom: 30px;
+  background-image: url("@/assets/home/homeTop.png");
+  background-repeat: no-repeat;
+  background-size: 100% 600px;
 }
