--- a/src/components/WalletBox/index.scss
+++ b/src/components/WalletBox/index.scss
@@ -1,18 +1,26 @@
 @use "@/styles/global" as *;
+.walletBorder {
+  display: inline-block;
+  padding: 1px; // 边框厚度
+  background: #fff;
+  clip-path: polygon(10px 0, 100% 0, 100% 100%, 0 100%, 0 6px);
+}
+
 .walletBox {
   display: flex;
   align-items: center;
   background: $primaryBgLg;
-  padding: 8px 16px;
-  border-radius: 16px;
+  padding: 6px 12px;
+  clip-path: polygon(10px 0, 100% 0, 100% 100%, 0 100%, 0 6px);
   .walletIcon {
     width: 16px;
     height: 16px;
   }
+
   .walletTitle {
     margin-left: 8px;
     font-weight: 500;
     font-size: 12px;
-    color: rgba(0, 0, 0, 0.85);
+    color: #fff;
   }
 }
