--- a/src/pages/Tabbar/Home/Components/HomeTopBox/index.scss
+++ b/src/pages/Tabbar/Home/Components/HomeTopBox/index.scss
@@ -1,54 +1,68 @@
 .HomeTopBox {
-  padding-top: 60px;
-  .dappTitle {
+  padding-top: 220px;
+  .dappBox {
     margin-top: 38px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .dappTitle {
     font-weight: bold;
     font-size: 32px;
-    color: #ffffff;
     padding-inline: 16px;
-  }
-  .homeTopBg {
-    padding-inline: 16px;
-    background-image: url("@/assets/home/topBg.png");
-    background-position: 100%;
+    text-align: center;
+    display: inline-block;
+    background-image: linear-gradient(
+      32.86788150482898deg,
+      #cdb1fe 0%,
+      #ffffff 52%,
+      #ae9cfb 100%
+    );
+    background-size: 100%;
     background-repeat: no-repeat;
-    background-size: 100% 400px;
-    height: 400px;
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent !important;
   }
+
   .dappHintTxt {
+    text-align: center;
     margin-top: 6px;
     font-weight: 400;
     font-size: 20px;
     color: #ffffff;
   }
   .dappHintBgTxt {
-    margin-top: 12px;
-    display: inline-block;
+    margin-top: 20px;
     padding: 4px 8px;
-    background: linear-gradient(270deg, #00fcc3 0%, #00b1fe 100%);
-    border-radius: 4px;
+    font-size: 14px;
+    text-align: center;
+    color: #a37fff;
   }
   .btnList {
-    margin-top: 180px;
+    padding-inline: 16px;
+    margin-top: 64px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     .btn {
-      height: 50px;
-      line-height: 50px;
+      height: 55px;
+      line-height: 55px;
       text-align: center;
       font-weight: 500;
       font-size: 16px;
       color: rgba(0, 0, 0, 0.85);
-      border-radius: 25px;
-      border: 1px solid #fff;
       width: 48%;
     }
     .bgOne {
-      background: linear-gradient(270deg, #00fcc3 0%, #00b1fe 100%);
+      background: url('@/assets/home/homeBtnOne.png');
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
     }
     .bgTwo {
-      background: linear-gradient(270deg, #ffbf67 0%, #e878ff 100%);
+         background: url('@/assets/home/homeBtnTwo.png');
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
     }
   }
 }
