--- a/src/pages/Tabbar/Home/Components/HomeCenterBox/index.scss
+++ b/src/pages/Tabbar/Home/Components/HomeCenterBox/index.scss
@@ -50,14 +50,15 @@
   }
   .allBox {
     padding-inline: 16px;
-
     position: relative;
     .allDataBg {
       position: absolute;
-      left: 0;
+      left: -12px;
       right: 0;
-      bottom: 0;
+      bottom: -62px;
+      width: 100%;
       height: 169px;
+      box-sizing: border-box;
     }
     .boxContent {
       display: flex;
